# PokemonSoullinkTracker

./: README.md  appcast.xml
.github/workflows/: mac-build.yml
PokemonSoullinkTracker/: CMakeLists.txt  main.cpp  mainwindow.ui
